--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.8",
-    "sqlite3": "^4.2.0"
+    "mongodb": "^3.5.8"
   }
 }
